[tool.poetry]
name = "model-fixer"
version = "1.0.0"
description = "Fixes model paths for Minecraft Java 1.20"
authors = ["Ersatz"]
readme = "README.md"
packages = [{include = "model_fixer"}]

[tool.poetry.dependencies]
python = "^3.11"
colorlog = "^6.7.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
